--- a/basic_chat_app/dockerfile
+++ b/basic_chat_app/dockerfile
@@ -6,9 +6,14 @@ FROM python:3.9-slim
 
 WORKDIR /app/
 
+RUN apt-get update && apt-get install -y curl telnet
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY ./server.py . 
 
-EXPOSE 5555
+EXPOSE 5000
 
-CMD [ "python", "./server.py" ]
+CMD [ "python","-u" ,"./server.py" ]
 
